add fly to and some formatting

--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:prod": "VITE_BASE=/webapps-internal/app-template vite build",
+    "build:prod": "VITE_BASE=https://alexbgurvi.ch/worldbank-datadive vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
