--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@duckdb/duckdb-wasm": "^1.29.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-hover-card": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
